kubernetes/remediation/30-hardened-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ycsec-remediated-workload
  namespace: ycsec-remediated
  labels:
    app.kubernetes.io/name: ycsec-remediated-workload
    app.kubernetes.io/part-of: yandex-cloud-security-remediation-program
    security.ycsec.io/phase: phase-12-remediation
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ycsec-remediated-workload
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ycsec-remediated-workload
        app.kubernetes.io/part-of: yandex-cloud-security-remediation-program
    spec:
      serviceAccountName: ycsec-app
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: nginxinc/nginx-unprivileged:1.27-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-tmp
              mountPath: /tmp
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
